fix: always round btn AB#20511

--- a/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
@@ -16,7 +16,7 @@
       *ngIf="event?.eventName === selectedEventName && showLessButton()"
       class="ibf"
       [class.selected]="event?.eventName === selectedEventName"
-      [shape]="shape"
+      shape="round"
       slot="start"
       [color]="getColor(event)"
       size="small"
@@ -39,7 +39,7 @@
       *ngIf="event?.eventName !== selectedEventName"
       class="ibf event-switch-button"
       [class.selected]="event?.eventName === selectedEventName"
-      [shape]="shape"
+      shape="round"
       slot="start"
       [color]="getColor(event)"
       size="small"
