--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -2,8 +2,7 @@
   *ngIf="type === 'active'"
   isConnected="true"
   [isTriggered]="event.thresholdReached"
-  [isNotTriggered]="!event.thresholdReached && !isMalawiFlashFloods()"
-  [isWarning]="!event.thresholdReached && isMalawiFlashFloods()"
+  [isNotTriggered]="!event.thresholdReached"
   [isSelected]="eventBubbleIsSelected(event.eventName)"
   isConnected="true"
 >
