--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -192,9 +192,7 @@
   </ng-container>
 
   <ng-container *ngIf="event">
-    <app-event-switcher
-      [event]="event"
-    ></app-event-switcher>
+    <app-event-switcher [event]="event"></app-event-switcher>
   </ng-container>
 </app-dialogue-turn>
 
