fix: set tooltip btn color AB#22949

--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -274,3 +274,14 @@ input:-webkit-autofill:focus {
   inset: initial;
   color: initial;
 }
+
+.tooltip--container {
+  .popover-content {
+    padding: 8px;
+    overflow: visible;
+  }
+
+  ion-label {
+    padding-inline-start: 0;
+  }
+}
