fix: rm tooltip scroll + add padding AB#22949

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -14,6 +14,7 @@
       <app-tooltip
         *ngIf="isWarn"
         [value]="'chat-component.common.warn-label.tooltip' | translate"
+        color="danger"
       ></app-tooltip>
     </p>
 
