--- a/interfaces/IBF-dashboard/src/app/components/tooltip/tooltip.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/tooltip/tooltip.component.html
@@ -9,7 +9,7 @@
     <ion-icon
       name="information-circle-outline"
       size="small"
-      color="medium"
+      [color]="color"
       aria-hidden="true"
       slot="icon-only"
     ></ion-icon>
