fix: move button to top right corner AB#22949

--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -275,6 +275,12 @@ input:-webkit-autofill:focus {
   color: initial;
 }
 
+app-tooltip {
+  position: absolute;
+  top: 4px;
+  right: 8px;
+}
+
 .tooltip--container {
   .popover-content {
     padding: 8px;
