feat: create custom btn AB#23023

--- a/interfaces/IBF-dashboard/src/app/components/about-btn/about-btn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/about-btn/about-btn.component.html
@@ -1,8 +1,11 @@
-<ion-button
+<app-ibf-button
   (click)="btnAction()"
-  color="ibf-tertiary"
-  size="small"
   data-test="chat-about-trigger"
+  size="small"
+  strong="true"
+  backgroundColor="ibf-white"
+  borderColor="ibf-no-alert-secondary"
+  textColor="ibf-black"
 >
   {{ btnLabel }}
-</ion-button>
+</app-ibf-button>
