--- a/interfaces/IBF-dashboard/src/app/components/export-view/export-view.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/export-view/export-view.component.html
@@ -1,12 +1,13 @@
-<ion-button
-  type="button"
+<app-ibf-button
   [title]="'Export View'"
   [attr.aria-label]="'Export View'"
-  size="small"
-  fill="solid"
-  color="ibf-tertiary"
   (click)="presentPopover()"
   data-test="export-view-button"
+  size="small"
+  strong="true"
+  backgroundColor="ibf-white"
+  borderColor="ibf-no-alert-secondary"
+  textColor="ibf-black"
 >
   <span class="ion-hide-sm-down">Export View</span>
-</ion-button>
+</app-ibf-button>
