--- a/interfaces/IBF-dashboard/src/app/components/ibf-guide-button/ibf-guide-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/ibf-guide-button/ibf-guide-button.component.html
@@ -1,8 +1,11 @@
-<ion-button
+<app-ibf-button
   data-test="ibf-guide-button"
   (click)="presentPopover()"
-  color="ibf-tertiary"
   size="small"
+  strong="true"
+  backgroundColor="ibf-white"
+  borderColor="ibf-no-alert-secondary"
+  textColor="ibf-black"
 >
   {{ 'ibf-guide-component.title' | translate }}
-</ion-button>
+</app-ibf-button>
