feat: change all btns to ibf-button AB#23086

--- a/interfaces/IBF-dashboard/src/app/components/change-password-popover/change-password-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/change-password-popover/change-password-popover.component.html
@@ -50,16 +50,15 @@
           </small>
         </ion-note>
       </div>
-      <ion-button
-        buttonType="button"
+      <app-ibf-button
         type="submit"
-        class="login-button"
-        expand="block"
+        backgroundColor="ibf-no-alert-primary"
+        textColor="ibf-white"
         [disabled]="!changePasswordForm.form.valid"
       >
         Change Password
         <ion-icon slot="end" name="sync"></ion-icon>
-      </ion-button>
+      </app-ibf-button>
     </form>
     <!-- </ion-item> -->
   </ion-card-content>
