--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -118,10 +118,10 @@
       [isConnected]="true"
       [isStopped]="true"
     >
-      <ion-button
+      <app-ibf-button
         *ngIf="placeCode"
         (click)="revertAreaSelection()"
-        color="ibf-no-alert-primary"
+        backgroundColor="ibf-no-alert-primary"
         size="small"
         class="ion-float-right"
       >
@@ -129,7 +129,7 @@
           'chat-component.common.revert-selection' | translate
         }}</span>
         <ion-icon name="arrow-back" slot="start"></ion-icon>
-      </ion-button>
+      </app-ibf-button>
       <p
         [innerHTML]="
           'chat-component.' + disasterTypeName + '.stopped-event.area'
@@ -143,17 +143,17 @@
                 }
         "
       ></p>
-      <ion-button
+      <app-ibf-button
         (click)="openToggleTriggerPopup(area, false)"
         [disabled]="!area.activeTrigger"
-        color="ibf-no-alert-primary"
-        expand="block"
-        [innerHTML]="
+        backgroundColor="ibf-no-alert-primary"
+      >
+        {{
           'chat-component.common.reactivate-trigger-popup.' +
             hasEap() +
             '.header' | translate
-        "
-      ></ion-button>
+        }}
+      </app-ibf-button>
     </app-dialogue-turn>
   </ng-container>
   <app-dialogue-turn
@@ -162,10 +162,10 @@
     [isConnected]="!isFirst"
     [isTriggered]="eventState?.event?.thresholdReached"
   >
-    <ion-button
+    <app-ibf-button
       *ngIf="placeCode"
       (click)="revertAreaSelection()"
-      color="ibf-primary"
+      backgroundColor="ibf-primary"
       size="small"
       class="ion-float-right"
     >
@@ -173,7 +173,7 @@
         'chat-component.common.revert-selection' | translate
       }}</span>
       <ion-icon name="arrow-back" slot="start"></ion-icon>
-    </ion-button>
+    </app-ibf-button>
     <ion-row>
       <ion-col size-lg="2" size-md="2" size-xs="2">
         <ion-img
@@ -290,31 +290,30 @@
             </ion-item>
           </ion-list>
           <ion-row class="ion-nowrap ion-align-items-center ion-margin-top">
-            <ion-button
+            <app-ibf-button
               [disabled]="area.submitDisabled"
-              color="ibf-primary"
+              backgroundColor="ibf-primary"
               type="submit"
-              expand="block"
-              class="submit-button"
-              [innerHTML]="
+              style="width: 100%"
+            >
+              {{
                 'chat-component.common.save-actions.submit-button-label'
                   | translate
-              "
-            ></ion-button>
+              }}
+            </app-ibf-button>
           </ion-row>
         </form>
       </ng-container>
-      <ion-button
+      <app-ibf-button
         *ngIf="disasterTypeSettings?.enableStopTrigger"
         (click)="openToggleTriggerPopup(area, true)"
         [disabled]="!area.activeTrigger"
-        color="ibf-primary"
-        expand="block"
-        [innerHTML]="
+        backgroundColor="ibf-primary"
+        >{{
           'chat-component.common.stop-trigger-popup.' + hasEap() + '.header'
             | translate
-        "
-      ></ion-button>
+        }}</app-ibf-button
+      >
     </ng-container>
   </app-dialogue-turn>
 </ion-content>
