--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -1,10 +1,10 @@
 <app-dialogue-turn
   *ngIf="type === 'active'"
-  isConnected="true"
+  [isConnected]="true"
   [isTriggered]="event.thresholdReached"
   [isNotTriggered]="!event.thresholdReached"
   [isSelected]="eventBubbleIsSelected(event.eventName)"
-  isConnected="true"
+  [isConnected]="true"
 >
   <ng-container *ngIf="event.activeTrigger && event.thresholdReached">
     <span>
@@ -190,9 +190,9 @@
 
 <app-dialogue-turn
   *ngIf="type === 'stopped' && event.eventName === selectedEvent"
-  isConnected="true"
-  isStopped="true"
-  isConnected="true"
+  [isConnected]="true"
+  [isStopped]="true"
+  [isConnected]="true"
 >
   <ng-container>
     <p
@@ -234,7 +234,7 @@
   </ng-container>
 </app-dialogue-turn>
 
-<app-dialogue-turn *ngIf="type === 'old'" isConnected="true">
+<app-dialogue-turn *ngIf="type === 'old'" [isConnected]="true">
   <p
     [innerHTML]="
       'chat-component.' + disasterTypeName + '.active-event-no-trigger.welcome'
@@ -254,7 +254,7 @@
   ></p>
 </app-dialogue-turn>
 
-<app-dialogue-turn *ngIf="type === 'no-event'" isConnected="true">
+<app-dialogue-turn *ngIf="type === 'no-event'" [isConnected]="true">
   <p
     [innerHTML]="
       'chat-component.' + disasterTypeName + '.no-event-no-trigger.welcome'
