refactor: create MapView service AB#23655

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -15,13 +15,15 @@
             <ion-label color="ibf-black"
               ><ion-text
                 ><strong>{{
-                  getAggregatesHeader().headerLabel
+                  getAggregatesHeader(mapView | async).headerLabel
                 }}</strong></ion-text
               ></ion-label
             >
             <ion-label color="ibf-black"
               ><ion-text
-                [innerHTML]="getAggregatesHeader().subHeaderLabel"
+                [innerHTML]="
+                  getAggregatesHeader(mapView | async).subHeaderLabel
+                "
               ></ion-text
             ></ion-label> </ion-col
           >`
