fix: add support email to too-late-tooltip + fix styling AB#23759

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -13,7 +13,7 @@
       ></span>
       <app-tooltip
         *ngIf="isWarn"
-        [value]="'chat-component.common.warn-label.tooltip' | translate"
+        [value]="'chat-component.common.warn-label.tooltip' | translate : { supportEmailAddress: supportEmailAddress}"
         color="danger"
       ></app-tooltip>
     </p>
