--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -282,12 +282,12 @@ app-tooltip {
 }
 
 .tooltip--container {
-  .popover-content {
+  .popover-viewport {
     padding: 8px;
-    overflow: visible;
-  }
+    overflow: hidden;
 
-  ion-label {
-    padding-inline-start: 0;
+    ion-label {
+      padding-inline-start: 0;
+    }
   }
 }
