--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -13,7 +13,10 @@
       ></span>
       <app-tooltip
         *ngIf="isWarn"
-        [value]="'chat-component.common.warn-label.tooltip' | translate : { supportEmailAddress: supportEmailAddress}"
+        [value]="
+          'chat-component.common.warn-label.tooltip'
+            | translate: { supportEmailAddress: supportEmailAddress }
+        "
         color="danger"
       ></app-tooltip>
     </p>
