feat: make single-admin work AB#23901

--- a/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
@@ -54,7 +54,7 @@
         )
       "
     >
-      {{ (placeCode | async).placeCodeName }}
+      {{ placeCode?.placeCodeName }}
     </ion-button>
   </div>
 </ng-template>
