feat: enable breadcrumbs for floods AB#23921

--- a/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
@@ -1,6 +1,6 @@
 <ng-container
   *ngIf="
-    useBreadcrumbs(country | async, disasterType | async);
+    useBreadcrumbs(disasterType | async);
     then breadcrumbs;
     else tabs
   "
