--- a/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.scss
@@ -1,4 +1,11 @@
+.breadcrumbs-container {
+  margin-top: 20px;
+}
+
 .breadcrumb {
+  height: 24px;
+  font-size: 12px;
+
   margin: 0;
   --box-shadow: none;
 
