style: update font size of layers menu AB#23653

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -28,7 +28,9 @@
           <ion-buttons slot="end">
             <ion-icon name="chevron-up-outline"></ion-icon>
           </ion-buttons>
-          <ion-title>Layers</ion-title>
+          <ion-title>{{
+            'layers-menu.menu-toggle-label' | translate
+          }}</ion-title>
         </ion-toolbar>
       </ion-header>
     </ion-menu-toggle>
