feat: zoom in and out to deeper levels AB#23927

--- a/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
@@ -41,7 +41,7 @@
         )
       "
     >
-      {{ (eventState | async).event?.eventName }}
+      {{ eventState?.event?.eventName }}
     </ion-button>
     <ion-button
       *ngIf="showBreadcrumb(mapViewEnum.adminArea)"
